@@ -1,19 +1,28 @@
 package emu.grasscutter.command;
 
 import emu.grasscutter.Grasscutter;
-import emu.grasscutter.game.Account;
+import emu.grasscutter.database.DatabaseHelper;
 import emu.grasscutter.game.player.Player;
+import it.unimi.dsi.fastutil.objects.Object2IntMap;
+import it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap;
 
 import org.reflections.Reflections;
 
+import java.net.IDN;
 import java.util.*;
+
+import static emu.grasscutter.config.Configuration.ACCOUNT;
+import static emu.grasscutter.config.Configuration.SERVER;
 
 @SuppressWarnings({"UnusedReturnValue", "unused"})
 public final class CommandMap {
-    private final Map<String, CommandHandler> commands = new HashMap<>();
-    private final Map<String, Command> annotations = new HashMap<>();
-    private final Map<String, Integer> targetPlayerIds = new HashMap<>();
+    private final Map<String, CommandHandler> commands = new TreeMap<>();
+    private final Map<String, CommandHandler> aliases = new TreeMap<>();
+    private final Map<String, Command> annotations = new TreeMap<>();
+    private final Object2IntMap<String> targetPlayerIds = new Object2IntOpenHashMap<>();
+    private static final int INVALID_UID = Integer.MIN_VALUE;
     private static final String consoleId = "console";
+
     public CommandMap() {
         this(false);
     }
@@ -23,7 +32,7 @@ public final class CommandMap {
     }
 
     public static CommandMap getInstance() {
-        return Grasscutter.getGameServer().getCommandMap();
+        return Grasscutter.getCommandMap();
     }
 
     /**
@@ -35,6 +44,7 @@ public final class CommandMap {
      */
     public CommandMap registerCommand(String label, CommandHandler command) {
         Grasscutter.getLogger().debug("Registered command: " + label);
+        label = label.toLowerCase();
 
         // Get command data.
         Command annotation = command.getClass().getAnnotation(Command.class);
@@ -44,7 +54,7 @@ public final class CommandMap {
         // Register aliases.
         if (annotation.aliases().length > 0) {
             for (String alias : annotation.aliases()) {
-                this.commands.put(alias, command);
+                this.aliases.put(alias, command);
                 this.annotations.put(alias, annotation);
             }
         }
@@ -59,6 +69,7 @@ public final class CommandMap {
      */
     public CommandMap unregisterCommand(String label) {
         Grasscutter.getLogger().debug("Unregistered command: " + label);
+
         CommandHandler handler = this.commands.get(label);
         if (handler == null) return this;
 
@@ -69,7 +80,7 @@ public final class CommandMap {
         // Unregister aliases.
         if (annotation.aliases().length > 0) {
             for (String alias : annotation.aliases()) {
-                this.commands.remove(alias);
+                this.aliases.remove(alias);
                 this.annotations.remove(alias);
             }
         }
@@ -77,9 +88,11 @@ public final class CommandMap {
         return this;
     }
 
-    public List<Command> getAnnotationsAsList() { return new LinkedList<>(this.annotations.values()); }
+    public List<Command> getAnnotationsAsList() {
+        return new LinkedList<>(this.annotations.values());
+    }
 
-    public HashMap<String, Command> getAnnotations() {
+    public Map<String, Command> getAnnotations() {
         return new LinkedHashMap<>(this.annotations);
     }
 
@@ -92,8 +105,8 @@ public final class CommandMap {
         return new LinkedList<>(this.commands.values());
     }
 
-    public HashMap<String, CommandHandler> getHandlers() {
-        return new LinkedHashMap<>(this.commands);
+    public Map<String, CommandHandler> getHandlers() {
+        return this.commands;
     }
 
     /**
@@ -103,7 +116,98 @@ public final class CommandMap {
      * @return The command handler.
      */
     public CommandHandler getHandler(String label) {
-        return this.commands.get(label);
+        CommandHandler handler = this.commands.get(label);
+        if (handler == null) {
+            // Try getting by alias
+            handler = this.aliases.get(label);
+        }
+        return handler;
+    }
+
+    private static int getUidFromString(String input) {
+        try {
+            return Integer.parseInt(input);
+        } catch (NumberFormatException ignored) {
+            var account = DatabaseHelper.getAccountByName(input);
+            if (account == null) return INVALID_UID;
+            var player = DatabaseHelper.getPlayerByAccount(account);
+            if (player == null) return INVALID_UID;
+            // We will be immediately fetching the player again after this,
+            // but offline vs online Player safety is more important than saving a lookup
+            return player.getUid();
+        }
+    }
+
+    private Player getTargetPlayer(String playerId, Player player, Player targetPlayer, List<String> args) {
+        // Top priority: If any @UID argument is present, override targetPlayer with it.
+        for (int i = 0; i < args.size(); i++) {
+            String arg = args.get(i);
+            if (arg.startsWith("@")) {
+                arg = args.remove(i).substring(1);
+                if (arg.equals("")) {
+                    // This is a special case to target nothing, distinct from failing to assign a target.
+                    // This is specifically to allow in-game players to run a command without targeting themselves or anyone else.
+                    return null;
+                }
+                int uid = getUidFromString(arg);
+                if (uid == INVALID_UID) {
+                    CommandHandler.sendTranslatedMessage(player, "commands.generic.invalid.uid");
+                    throw new IllegalArgumentException();
+                }
+                targetPlayer = Grasscutter.getGameServer().getPlayerByUid(uid, true);
+                if (targetPlayer == null) {
+                    CommandHandler.sendTranslatedMessage(player, "commands.execution.player_exist_error");
+                    throw new IllegalArgumentException();
+                }
+                return targetPlayer;
+            }
+        }
+
+        // Next priority: If we invoked with a target, use that.
+        // By default, this only happens when you message another player in-game with a command.
+        if (targetPlayer != null) {
+            return targetPlayer;
+        }
+
+        // Next priority: Use previously-set target. (see /target [[@]UID])
+        if (targetPlayerIds.containsKey(playerId)) {
+            targetPlayer = Grasscutter.getGameServer().getPlayerByUid(targetPlayerIds.getInt(playerId), true);
+            // We check every time in case the target is deleted after being targeted
+            if (targetPlayer == null) {
+                CommandHandler.sendTranslatedMessage(player, "commands.execution.player_exist_error");
+                throw new IllegalArgumentException();
+            }
+            return targetPlayer;
+        }
+
+        // Lowest priority: Target the player invoking the command. In the case of the console, this will return null.
+        return player;
+    }
+
+    private boolean setPlayerTarget(String playerId, Player player, String targetUid) {
+        if (targetUid.equals("")) { // Clears the default targetPlayer.
+            targetPlayerIds.removeInt(playerId);
+            CommandHandler.sendTranslatedMessage(player, "commands.execution.clear_target");
+            return true;
+        }
+
+        // Sets default targetPlayer to the UID provided.
+        int uid = getUidFromString(targetUid);
+        if (uid == INVALID_UID) {
+            CommandHandler.sendTranslatedMessage(player, "commands.generic.invalid.uid");
+            return false;
+        }
+        Player targetPlayer = Grasscutter.getGameServer().getPlayerByUid(uid, true);
+        if (targetPlayer == null) {
+            CommandHandler.sendTranslatedMessage(player, "commands.execution.player_exist_error");
+            return false;
+        }
+
+        targetPlayerIds.put(playerId, uid);
+        String target = uid + " (" + targetPlayer.getAccount().getUsername() + ")";
+        CommandHandler.sendTranslatedMessage(player, "commands.execution.set_target", target);
+        CommandHandler.sendTranslatedMessage(player, targetPlayer.isOnline() ? "commands.execution.set_target_online" : "commands.execution.set_target_offline", target);
+        return true;
     }
 
     /**
@@ -113,6 +217,15 @@ public final class CommandMap {
      * @param rawMessage The messaged used to invoke the command.
      */
     public void invoke(Player player, Player targetPlayer, String rawMessage) {
+        // The console outputs in-game command. [{Account Username} (Player UID: {Player Uid})]
+        if (SERVER.logCommands) {
+            if (player != null) {
+                Grasscutter.getLogger().info("Command used by [" + player.getAccount().getUsername() + " (Player UID: " + player.getUid() + ")]: " + rawMessage);
+            } else {
+                Grasscutter.getLogger().info("Command used by server console: " + rawMessage);
+            }
+        }
+
         rawMessage = rawMessage.trim();
         if (rawMessage.length() == 0) {
             CommandHandler.sendTranslatedMessage(player, "commands.generic.not_specified");
@@ -122,125 +235,80 @@ public final class CommandMap {
         // Parse message.
         String[] split = rawMessage.split(" ");
         List<String> args = new LinkedList<>(Arrays.asList(split));
-        String label = args.remove(0);
+        String label = args.remove(0).toLowerCase();
         String playerId = (player == null) ? consoleId : player.getAccount().getId();
-        
+
         // Check for special cases - currently only target command.
-        String targetUidStr = null;
         if (label.startsWith("@")) { // @[UID]
-            targetUidStr = label.substring(1);
+            this.setPlayerTarget(playerId, player, label.substring(1));
+            return;
         } else if (label.equalsIgnoreCase("target")) { // target [[@]UID]
             if (args.size() > 0) {
-                targetUidStr = args.get(0);
+                String targetUidStr = args.get(0);
                 if (targetUidStr.startsWith("@")) {
                     targetUidStr = targetUidStr.substring(1);
                 }
+                this.setPlayerTarget(playerId, player, targetUidStr);
+                return;
             } else {
-                targetUidStr = "";
+                this.setPlayerTarget(playerId, player, "");
+                return;
             }
-        }
-        if (targetUidStr != null) {
-            if (targetUidStr.equals("")) { // Clears the default targetPlayer.
-                targetPlayerIds.remove(playerId);
-                CommandHandler.sendTranslatedMessage(player, "commands.execution.clear_target");
-            } else { // Sets default targetPlayer to the UID provided.
-                try {
-                    int uid = Integer.parseInt(targetUidStr);
-                    targetPlayer = Grasscutter.getGameServer().getPlayerByUid(uid, true);
-                    if (targetPlayer == null) {
-                        CommandHandler.sendTranslatedMessage(player, "commands.execution.player_exist_error");
-                    } else {
-                        targetPlayerIds.put(playerId, uid);
-                        CommandHandler.sendTranslatedMessage(player, "commands.execution.set_target", targetUidStr);
-                        CommandHandler.sendTranslatedMessage(player, targetPlayer.isOnline()? "commands.execution.set_target_online" : "commands.execution.set_target_offline", targetUidStr);
-                    }
-                } catch (NumberFormatException e) {
-                    CommandHandler.sendTranslatedMessage(player, "commands.execution.uid_error");
-                }
-            }
-            return;
         }
 
         // Get command handler.
-        CommandHandler handler = this.commands.get(label);
+        CommandHandler handler = this.getHandler(label);
+
+        // Check if the handler is null.
         if (handler == null) {
             CommandHandler.sendTranslatedMessage(player, "commands.generic.unknown_command", label);
             return;
         }
 
-        // If any @UID argument is present, override targetPlayer with it.
-        for (int i = 0; i < args.size(); i++) {
-            String arg = args.get(i);
-            if (arg.startsWith("@")) {
-                arg = args.remove(i).substring(1);
-                try {
-                    int uid = Integer.parseInt(arg);
-                    targetPlayer = Grasscutter.getGameServer().getPlayerByUid(uid, true);
-                    if (targetPlayer == null) {
-                        CommandHandler.sendTranslatedMessage(player, "commands.execution.player_exist_error");
-                        return;
-                    }
-                    break;
-                } catch (NumberFormatException e) {
-                    CommandHandler.sendTranslatedMessage(player, "commands.execution.uid_error");
-                    return;
-                }
-            }
-        }
-        
-        // If there's still no targetPlayer at this point, use previously-set target
-        if (targetPlayer == null) {
-            if (targetPlayerIds.containsKey(playerId)) {
-                targetPlayer = Grasscutter.getGameServer().getPlayerByUid(targetPlayerIds.get(playerId), true);  // We check every time in case the target is deleted after being targeted
-                if (targetPlayer == null) {
-                    CommandHandler.sendTranslatedMessage(player, "commands.execution.player_exist_error");
-                    return;
-                }
-            } else {
-                // If there's still no targetPlayer at this point, use executor.
-                targetPlayer = player;
-            }
+        // Get the command's annotation.
+        Command annotation = this.annotations.get(label);
+
+        // Resolve targetPlayer
+        try {
+            targetPlayer = getTargetPlayer(playerId, player, targetPlayer, args);
+        } catch (IllegalArgumentException e) {
+            return;
         }
 
-        // Check for permission.
-        if (player != null) {
-            String permissionNode = this.annotations.get(label).permission();
-            String permissionNodeTargeted = this.annotations.get(label).permissionTargeted();
-            Account account = player.getAccount();
-            if (player != targetPlayer) {  // Additional permission required for targeting another player
-                if (!permissionNodeTargeted.isEmpty() && !account.hasPermission(permissionNodeTargeted)) {
-                    CommandHandler.sendTranslatedMessage(player, "commands.generic.permission_error");
-                    return;
-                }
-            }
-            if (!permissionNode.isEmpty() && !account.hasPermission(permissionNode)) {
-                CommandHandler.sendTranslatedMessage(player, "commands.generic.permission_error");
-                return;
-            }
+        // Check for permissions.
+        if (!Grasscutter.getPermissionHandler().checkPermission(player, targetPlayer, annotation.permission(), this.annotations.get(label).permissionTargeted())) {
+            return;
         }
 
         // Check if command has unfulfilled constraints on targetPlayer
-        Command.TargetRequirement targetRequirement = this.annotations.get(label).targetRequirement();
+        Command.TargetRequirement targetRequirement = annotation.targetRequirement();
         if (targetRequirement != Command.TargetRequirement.NONE) {
             if (targetPlayer == null) {
+                handler.sendUsageMessage(player);
                 CommandHandler.sendTranslatedMessage(player, "commands.execution.need_target");
                 return;
             }
+
             if ((targetRequirement == Command.TargetRequirement.ONLINE) && !targetPlayer.isOnline()) {
+                handler.sendUsageMessage(player);
                 CommandHandler.sendTranslatedMessage(player, "commands.execution.need_target_online");
                 return;
             }
+
             if ((targetRequirement == Command.TargetRequirement.OFFLINE) && targetPlayer.isOnline()) {
+                handler.sendUsageMessage(player);
                 CommandHandler.sendTranslatedMessage(player, "commands.execution.need_target_offline");
                 return;
             }
         }
 
+        // Copy player and handler to final properties.
+        final Player targetPlayerF = targetPlayer; // Is there a better way to do this?
+        final CommandHandler handlerF = handler; // Is there a better way to do this?
+
         // Invoke execute method for handler.
-        boolean threading  = this.annotations.get(label).threading();
-        final Player targetPlayerF = targetPlayer;  // Is there a better way to do this?
-        Runnable runnable = () -> handler.execute(player, targetPlayerF, args);
-        if(threading) {
+        Runnable runnable = () -> handlerF.execute(player, targetPlayerF, args);
+        if (annotation.threading()) {
             new Thread(runnable).start();
         } else {
             runnable.run();
@@ -253,10 +321,11 @@ public final class CommandMap {
     private void scan() {
         Reflections reflector = Grasscutter.reflector;
         Set<Class<?>> classes = reflector.getTypesAnnotatedWith(Command.class);
+
         classes.forEach(annotated -> {
             try {
                 Command cmdData = annotated.getAnnotation(Command.class);
-                Object object = annotated.newInstance();
+                Object object = annotated.getDeclaredConstructor().newInstance();
                 if (object instanceof CommandHandler)
                     this.registerCommand(cmdData.label(), (CommandHandler) object);
                 else Grasscutter.getLogger().error("Class " + annotated.getName() + " is not a CommandHandler!");
